--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -13,12 +13,14 @@ edition = "2021"
 tauri-build = { version = "1.4", features = [] }
 
 [dependencies]
+tokio = { version = "1", features = ["full"] }
 tauri = { version = "1.4", features = ["shell-open"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 nfd2 = "0.3.1"
 walkdir = "2.3.3"
 ts-rs = "6.2.1"
+reqwest = "0.11"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
